# voirs

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.ci  Dockerfile.dev  LICENSE-APACHE  LICENSE-MIT  MIGRATION_STATUS.md  README.md  SCIRS2_INTEGRATION_POLICY.md  TODO.md  TRAINING.md  deny.toml  docker-compose.prod.yml  docker-compose.yml  publish_one.sh  voi_rs_design_spec.md
crates/voirs-acoustic/: Cargo.toml  README.md  TODO.md
crates/voirs-acoustic/benches/: simple_benchmarks.rs
crates/voirs-acoustic/examples/: model_optimization.rs  models_config.toml  pretrained_models.rs  simple_synthesis_demo.rs
crates/voirs-acoustic/src/: batch_processor.rs  batching.rs  conditioning.rs  fastspeech.rs  fastspeech2_trainer.rs  lib.rs  memory.rs  model_manager.rs  models.rs  optimization.rs  parallel_attention.rs  performance_targets.rs  singing.rs  traits.rs  unified_conditioning.rs  utils.rs  utils.rs.backup
crates/voirs-acoustic/tests/: conditioning_tests.rs  conditioning_tests.rs.disabled  integration_tests.rs  integration_tests.rs.disabled  memory_caching_tests.rs.disabled  optimization_tests.rs.disabled  parallel_attention_tests.rs.disabled  vits_tests.rs  vits_tests.rs.disabled
crates/voirs-cli/: Cargo.toml  README.md  TODO.md
crates/voirs-cli/src/: cli_types.rs  commands.rs  config.rs  error.rs  lib.rs  main.rs  model_types.rs  output.rs  progress.rs  ssml.rs
crates/voirs-cli/tests/: lib.rs
crates/voirs-cloning/: Cargo.toml  README.md  TODO.md
crates/voirs-cloning/benches/: performance_benchmarks.rs
crates/voirs-cloning/src/: ab_testing.rs  acoustic.rs  adaptation.rs  age_gender_adaptation.rs  api_standards.rs  authenticity.rs  auto_scaling.rs  cloning_wizard.rs  cloud_scaling.rs  config.rs  config_management.rs  consent.rs  consent_crypto.rs  conversion.rs  core.rs  edge.rs  embedding.rs  emotion_transfer.rs  enterprise_sso.rs  error_handling.rs  few_shot.rs  gaming_plugins.rs  gpu_acceleration.rs  lib.rs  load_balancing.rs  long_term_adaptation.rs  long_term_stability.rs  memory_optimization.rs  misuse_prevention.rs  mobile.rs  model_loading.rs  multimodal.rs  neural_codec.rs  perceptual_evaluation.rs  performance_monitoring.rs  personality.rs  plugins.rs  preprocessing.rs  privacy_protection.rs  quality.rs  (+18 more)
crates/voirs-cloning/tests/: basic_implementation_tests.rs  fuzz_tests.rs  integration_tests.rs  memory_leak_tests.rs  security_tests.rs
crates/voirs-conversion/: Cargo.toml  README.md  TODO.md
crates/voirs-conversion/src/: acoustic.rs  audio_libraries_update.rs  audio_quality_research.rs  cache.rs  cloning.rs  cloud_scaling.rs  communication.rs  compression_research.rs  config.rs  core.rs  diagnostics.rs  emotion.rs  fallback.rs  format.rs  gaming.rs  iot.rs  lib.rs  ml_frameworks.rs  mobile.rs  models.rs  monitoring.rs  multi_target.rs  neural_vocoding.rs  optimizations.rs  pipeline_optimization.rs  platform_libraries.rs  processing.rs  profiling.rs  quality.rs  realtime.rs  realtime_libraries.rs  realtime_ml.rs  recognition.rs  scalability.rs  spatial.rs  streaming.rs  streaming_platforms.rs  style_consistency.rs  style_transfer.rs  thread_safety.rs  (+5 more)
crates/voirs-conversion/tests/: integration_tests.rs  memory_tests.rs  monitoring_tests.rs  performance_tests.rs  quality_tests.rs  stress_tests.rs
crates/voirs-dataset/: Cargo.toml  README.md  TODO.md
crates/voirs-dataset/benches/: processing.rs  quality.rs  scalability.rs
crates/voirs-dataset/examples/: advanced_audio_analysis.rs  perf_test.rs
crates/voirs-dataset/src/: audio.rs  augmentation.rs  datasets.rs  error.rs  (+13 more)
crates/voirs-emotion/: Cargo.toml  README.md  TODO.md  examples_advanced.rs  examples_basic.rs  integration_guide.md
crates/voirs-evaluation/: BUILD.md  Cargo.toml  Makefile  PYTHON_BINDINGS.md  README.md  TODO.md  build.ps1  build.py  build.sh  justfile  requirements.txt  setup.py
crates/voirs-feedback/: .dockerignore  Cargo.toml  Cargo.toml.backup  Dockerfile  README.md  TODO.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  test_exercise_count.rs
crates/voirs-ffi/: Cargo.toml  MANIFEST.in  README.md  README_NODEJS.md  README_NODEJS_COMPREHENSIVE.md  TODO.md  build_python.py  index.d.ts  package.json  pyproject.toml  requirements-dev.txt  setup.py  test_runner.sh  voirs_ffi.pyi
crates/voirs-g2p/: Cargo.toml  README.md  TODO.md
crates/voirs-recognizer/: .env.example  CI-CD-README.md  Cargo.toml  Dockerfile  README.md  TODO.md  build-wasm.sh  docker-compose.yml  generate-header.py  package.json  pyproject.toml
crates/voirs-sdk/: Cargo.toml  README.md  TODO.md  test_output.txt
crates/voirs-singing/: Cargo.toml  README.md  TODO.md
crates/voirs-spatial/: Cargo.toml  README.md  TODO.md
crates/voirs-vocoder/: Cargo.toml  README.md  TODO.md
examples/: Cargo.toml  KOKORO_EXAMPLES.md  LEARNING_PATHS.md  Makefile  README.md  TODO.md  TROUBLESHOOTING.md  WASM_README.md  ab_testing_quality_comparison.rs  ai_integration_example.rs  audio_quality_assessment.rs  basic_configuration.rs  batch_evaluation_comparison.rs  batch_synthesis.rs  best_practices_guide.rs  build_wasm_demo.sh  chinese_tts_demo.rs  cloud_deployment_example.rs  community_contributions_gallery.rs  complete_pipeline.rs  complete_voice_pipeline.rs  comprehensive_benchmark_suite.rs  comprehensive_testing_framework.rs  cpp_integration_example.cpp  creative_applications_example.rs  debug_troubleshooting_example.rs  dependency_report.json  desktop_integration_example.rs  documentation_test_report.md  documentation_testing_example.rs  educational_tools_example.rs  emotion_control_example.rs  emotion_control_example_fixed.rs  examples_testing_framework.rs  faq_examples.rs  game_integration_example.rs  hello_world.rs  hello_world_real_tts.rs  hello_world_tts.rs  iot_edge_synthesis_example.rs  (+36 more)
examples/tools/: dependency_tracker.py  documentation_generator.py  version_manager.py
examples/tutorials/: 01-getting-started.md  02-basic-configuration.md  03-simple-synthesis.md  04-voice-cloning.md  05-emotion-control.md  06-realtime-processing.md  README.md
(+1354 files in other folders)
